--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -6,11 +6,11 @@
     <title>Presupuesto - Hilos de Kurumi</title>
 
     <!-- Vinculando hoja de estilos externa -->
-    <link rel="stylesheet" href="../Estilo/style-presupuesto.css">
+    <link rel="stylesheet" href="Estilo/style-presupuesto.css">
 
     <!-- Fuente personalizada desde Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagenes/crochet.png">
+    <link rel="icon" href="Imagenes/crochet.png">
 </head>
 
 <body>
@@ -24,9 +24,9 @@
         <ul>
             <li class="nav-into">
                 <a href="index.html">Inicio</a>
-                <a href="producto.html">Galería</a>
-                <a href="presupuesto.html">Presupuesto</a>
-                <a href="contacto.html">Contacto</a>      
+                <a href="views/producto.html">Galería</a>
+                <a href="views/presupuesto.html">Presupuesto</a>
+                <a href="views/contacto.html">Contacto</a>      
             </li>
         </ul>
     </nav>
@@ -69,9 +69,9 @@
     <footer class="footer">
         <p>Síguenos en nuestras redes sociales</p>
         <nav class="social-links">
-            <a href="#"><img src="../Imagenes/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="../Imagenes/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="../Imagenes/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="Imagenes/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="Imagenes/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="Imagenes/instagram.png" alt="Instagram"></a>
         </nav>
         <p>&copy; 2023 Hilos de Kurumi - Todos los derechos reservados</p>
     </footer>
