--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlace al archivo de estilos CSS para la página de contacto -->
-    <link rel="stylesheet" href="../Estilo/style-contacto.css">
+    <link rel="stylesheet" href="Estilo/style-contacto.css">
     <!-- Fuente personalizada de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagenes/crochet.png">
+    <link rel="icon" href="Imagenes/crochet.png">
     
     <!-- Título de la página -->
     <title>Hilos de Kurumi - Contacto</title>
@@ -29,9 +29,9 @@
             <li class="nav-into">
                 <!-- Enlaces de navegación hacia las diferentes secciones del sitio web -->
                 <a href="index.html">Inicio</a>
-                <a href="producto.html">Galería</a>
-                <a href="presupuesto.html">Presupuesto</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="views/producto.html">Galería</a>
+                <a href="views/presupuesto.html">Presupuesto</a>
+                <a href="views/contacto.html">Contacto</a>  
             </li>
         </ul>
     </nav>
