--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -25,7 +25,7 @@
             <li class="nav-into">
                 <a href="index.html">Inicio</a>
                 <a href="views/producto.html">Galería</a>
-                <a href="presupuesto.html">Presupuesto</a>
+                <a href="views/presupuesto.html">Presupuesto</a>
                 <a href="views/contacto.html">Contacto</a>      
             </li>
         </ul>
