--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlace al archivo de estilos CSS para la página de contacto -->
-    <link rel="stylesheet" href="Estilo/style-contacto.css">
+    <link rel="stylesheet" href="../Estilo/style-contacto.css">
     <!-- Fuente personalizada de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +28,10 @@
         <ul>
             <li class="nav-into">
                 <!-- Enlaces de navegación hacia las diferentes secciones del sitio web -->
-                <a href="index.html">Inicio</a>
-                <a href="views/producto.html">Galería</a>
-                <a href="views/presupuesto.html">Presupuesto</a>
-                <a href="views/contacto.html">Contacto</a>  
+                <a href="../index.html">Inicio</a>
+                <a href="producto.html">Galería</a>
+                <a href="presupuesto.html">Presupuesto</a>
+                <a href="contacto.html">Contacto</a>  
             </li>
         </ul>
     </nav>
