--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -6,7 +6,7 @@
     <title>Presupuesto - Hilos de Kurumi</title>
 
     <!-- Vinculando hoja de estilos externa -->
-    <link rel="stylesheet" href="Estilo/style-presupuesto.css">
+    <link rel="stylesheet" href="../Estilo/style-presupuesto.css">
 
     <!-- Fuente personalizada desde Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet">
@@ -23,10 +23,10 @@
     <nav class="nav-index">
         <ul>
             <li class="nav-into">
-                <a href="index.html">Inicio</a>
-                <a href="views/producto.html">Galería</a>
-                <a href="views/presupuesto.html">Presupuesto</a>
-                <a href="views/contacto.html">Contacto</a>      
+                <a href="../index.html">Inicio</a>
+                <a href="producto.html">Galería</a>
+                <a href="presupuesto.html">Presupuesto</a>
+                <a href="contacto.html">Contacto</a>      
             </li>
         </ul>
     </nav>
