--- a/views/producto.html
+++ b/views/producto.html
@@ -22,10 +22,10 @@
     <nav class="nav-index">
         <ul>
             <li class="nav-into">
-                <a href="index.html">Inicio</a>
-                <a href="views/producto.html">Galería</a>
-                <a href="views/presupuesto.html">Presupuesto</a>
-                <a href="views/contacto.html">Contacto</a>  
+                <a href="../index.html">Inicio</a>
+                <a href="producto.html">Galería</a>
+                <a href="presupuesto.html">Presupuesto</a>
+                <a href="contacto.html">Contacto</a>  
             </li>
         </ul>
     </nav>
