Cambio de trabajo V1.0

--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -69,9 +69,9 @@
     <footer class="footer">
         <p>Síguenos en nuestras redes sociales</p>
         <nav class="social-links">
-            <a href="#"><img src="Imagenes/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="Imagenes/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="Imagenes/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="../Imagenes/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="../Imagenes/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="../Imagenes/instagram.png" alt="Instagram"></a>
         </nav>
         <p>&copy; 2023 Hilos de Kurumi - Todos los derechos reservados</p>
     </footer>
