--- a/views/producto.html
+++ b/views/producto.html
@@ -38,8 +38,8 @@
             <img src="../Imagenes/producto-1.webp" alt="Bufanda de crochet">
             <!-- Información del producto -->
             <div class="product-info">
-                <h2 class="product-name">Bufanda de Crochet</h2>
-                <p class="product-description">Bufanda tejida a mano, suave y perfecta para el invierno.</p>
+                <h2 class="product-name">Hilo de Baby Andes</h2>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Premium</p>
                 <p class="product-price">$25.00</p>
             </div>
@@ -50,8 +50,8 @@
         <div class="product-card">
             <img src="../Imagenes/producto-2.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <h2 class="product-name">Hilo Adelaida</h2>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -62,7 +62,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-3.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de Indiecita</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -74,7 +74,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-4.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -86,7 +86,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-5.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -98,7 +98,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-6.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -110,7 +110,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-7.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -122,7 +122,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-8.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilo de rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -134,7 +134,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-9.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilos de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
@@ -146,7 +146,7 @@
         <div class="product-card">
             <img src="../Imagenes/producto-10.webp" alt="Gorro de crochet">
             <div class="product-info">
-                <h2 class="product-name">Gorro de Crochet</h2>
+                <h2 class="product-name">Hilos de Rosarios</h2>
                 <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
