--- a/views/producto.html
+++ b/views/producto.html
@@ -75,7 +75,7 @@
             <img src="../Imagenes/producto-4.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilo de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -87,7 +87,7 @@
             <img src="../Imagenes/producto-5.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilo de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -99,7 +99,7 @@
             <img src="../Imagenes/producto-6.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilo de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -111,7 +111,7 @@
             <img src="../Imagenes/producto-7.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilo de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -123,7 +123,7 @@
             <img src="../Imagenes/producto-8.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilo de rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -135,7 +135,7 @@
             <img src="../Imagenes/producto-9.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilos de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
@@ -147,7 +147,7 @@
             <img src="../Imagenes/producto-10.webp" alt="Gorro de crochet">
             <div class="product-info">
                 <h2 class="product-name">Hilos de Rosarios</h2>
-                <p class="product-description">Gorro tejido, ideal para días fríos y como accesorio de moda.</p>
+                <p class="product-description">Producto para tejer a mano, suave y perfecta para el invierno.</p>
                 <p class="product-quality">Calidad: Alta</p>
                 <p class="product-price">$15.00</p>
             </div>
