--- a/views/contacto.html
+++ b/views/contacto.html
@@ -53,7 +53,7 @@
                     Calle de las Flores, 123<br>
                     28001, Madrid, España
                 </address>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13333381.99881003!2d-17.581064739370586!3d35.3253526618782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc42e3783261bc8b%3A0xa6ec2c940768a3ec!2zRXNwYcOxYQ!5e0!3m2!1ses!2ses!4v1730595440693!5m2!1ses!2ses"
+                <iframe class="contact-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13333381.99881003!2d-17.581064739370586!3d35.3253526618782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc42e3783261bc8b%3A0xa6ec2c940768a3ec!2zRXNwYcOxYQ!5e0!3m2!1ses!2ses!4v1730595440693!5m2!1ses!2ses"
                  width="400" 
                  height="300" 
                  style="border: 10px;" allowfullscreen="" 
