--- a/Estilo/style-contacto.css
+++ b/Estilo/style-contacto.css
@@ -125,6 +125,11 @@ footer p {
         padding: 15px;
     }
 
+    .contact-maps{
+        width: 200px;
+        height: 300px;
+    }
+
     header h1 {
         font-size: 2em;
     }
