--- a/views/contacto.html
+++ b/views/contacto.html
@@ -31,7 +31,7 @@
                 <a href="../index.html">Inicio</a>
                 <a href="producto.html">Galería</a>
                 <a href="presupuesto.html">Presupuesto</a>
-                <a href="contacto.html">Contacto</a>  
+                <a href="contacto.html" class="active">Contacto</a>  
             </li>
         </ul>
     </nav>
