--- a/Estilo/style-contacto.css
+++ b/Estilo/style-contacto.css
@@ -52,6 +52,13 @@ header h1 {
     background-color: #c98982;
     border-radius: 5px;
 }
+
+.nav-into a.active {
+    color: #fff;
+    background-color: #c98982;
+    border-radius: 5px;
+  }
+
 /* Contenedor principal de contacto */
 .contact-container {
     display: flex;
