--- a/Estilo/style-presupuesto.css
+++ b/Estilo/style-presupuesto.css
@@ -48,6 +48,13 @@ header h1 {
     transition: background-color 0.3s ease;
 }
 
+.nav-into a.active {
+    color: #fff;
+    background-color: #c98982;
+    border-radius: 5px;
+  }
+
+
 .nav-into a:hover {
     background-color: #c98982;
     border-radius: 5px;
