--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -25,7 +25,7 @@
             <li class="nav-into">
                 <a href="../index.html">Inicio</a>
                 <a href="producto.html">Galería</a>
-                <a href="presupuesto.html">Presupuesto</a>
+                <a href="presupuesto.html" class="active" >Presupuesto</a>
                 <a href="contacto.html">Contacto</a>      
             </li>
         </ul>
