--- a/views/producto.html
+++ b/views/producto.html
@@ -23,7 +23,7 @@
         <ul>
             <li class="nav-into">
                 <a href="../index.html">Inicio</a>
-                <a href="producto.html">Galería</a>
+                <a href="producto.html" class="active">Galería</a>
                 <a href="presupuesto.html">Presupuesto</a>
                 <a href="contacto.html">Contacto</a>  
             </li>
